<resources>
    <string name="app_name">AdorDominiqueLab5</string>

    <string name="act1">ACTIVITY 1</string>
    <string name="act2">ACTIVITY 2</string>

    <string name="loc">Location:</string>
    <string name="dis">Distance:</string>
    <string name="map">MAP</string>

    <string name="nam_act1">Lucky Chinatown Mall</string>
    <string name="loc_act1">21 Reina Regente Street Binondo, Manila</string>
    <string name="dis_act1">2.9 Kilometers from UST</string>

    <string name="nam_act2">National Museum</string>
    <string name="loc_act2">Padre Burgos Ave Ermita, Manila</string>
    <string name="dis_act2">3.6 Kilometers from UST</string>
</resources>
