<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#423F3F"
    tools:context=".SecondActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/natmu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/nam_act2"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/natmu" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="212dp"
        android:background="#FF9E89"
        android:gravity="center"
        android:text="@string/nam_act2"
        android:textColor="#56504E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loc_act2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="#F4D65D  "
        android:text="@string/loc"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:fontFamily="serif"
        app:layout_constraintEnd_toStartOf="@+id/loc2_act2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/dis2"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="67dp"
        android:background="#F4D65D  "
        android:text="@string/dis"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/button_act1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loc_act2" />

    <TextView
        android:id="@+id/loc2_act2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="62dp"
        android:background="#6CADD7"
        android:gravity="center"
        android:text="@string/loc_act2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/dis2_act2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loc_act2"
        app:layout_constraintTop_toBottomOf="@+id/natmu" />

    <TextView
        android:id="@+id/dis2_act2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:background="#6CADD7  "
        android:gravity="center"
        android:text="@string/dis_act2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBaseline_toBaselineOf="@+id/dis2"
        app:layout_constraintEnd_toEndOf="@+id/loc2_act2"
        app:layout_constraintStart_toStartOf="@+id/loc2_act2" />

    <Button
        android:id="@+id/button_act1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="25dp"
        android:onClick="process2"
        android:text="@string/act1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/act1" />

    <Button
        android:id="@+id/button_map2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="25dp"
        android:onClick="process2"
        android:text="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>