<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#423F3F"
    tools:context=".FirstActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/chinatown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/nam_act1"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chinatown" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="210dp"
        android:background="#FF9E89"
        android:gravity="center"
        android:text="@string/nam_act1"
        android:textColor="#56504E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="#F4D65D  "
        android:text="@string/loc"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:fontFamily="serif"
        app:layout_constraintEnd_toStartOf="@+id/loc1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#F4D65D  "
        android:text="@string/dis"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:fontFamily="serif"
        app:layout_constraintBaseline_toBaselineOf="@+id/dis1"
        app:layout_constraintEnd_toStartOf="@+id/dis1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loc1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#6CADD7"
        android:gravity="center"
        android:text="@string/loc_act1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/loc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loc"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/dis1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="89dp"
        android:background="#6CADD7  "
        android:gravity="center"
        android:text="@string/dis_act1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dis"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/button_act2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="25dp"
        android:onClick="process1"
        android:text="@string/act2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="25dp"
        android:onClick="process1"
        android:text="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>